[package]
name = "esp-mbedtls-sys"
version = "0.1.0"
edition = "2021"
links = "mbedtls"
license = "MIT OR Apache-2.0"
rust-version = "1.84"

[lib]
harness = false

[features]
default = []

# ESP-HAL: Exactly *one* chip MUST be selected via its feature:
esp32 = []
esp32c3 = []
esp32c6 = []
esp32s2 = []
esp32s3 = []

[dependencies]
defmt = { version = "1", optional = true }

# ESP-IDF: The mbedtls lib distributed with ESP-IDF is used
# All other platforms: mbedtls libs and bindings are created on the fly
[target.'cfg(target_os = "espidf")'.dependencies]
esp-idf-sys = { version = "0.36", default-features = false }

[build-dependencies]
anyhow = "1"
bindgen = "0.71"
env_logger = "0.11"
log = "0.4"
cmake = "0.1.52"
fs_extra = "1.3"
embuild = "0.33"
