[package]
name = "esp-mbedtls"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.84"

[lib]
harness = false

[features]
default = ["accel", "edge-nal"]
# Enable HW acceleration for the ESP series of MCUs via `esp-hal`
esp = ["dep:esp-hal", "crypto-bigint", "accel"]
force-generate-bindings = ["esp-mbedtls-sys/force-generate-bindings"]
force-esp-riscv-toolchain = ["esp-mbedtls-sys/force-esp-riscv-toolchain"]
accel = ["accel-sha1", "accel-sha256", "accel-sha512", "accel-exp-mod", "esp-mbedtls-sys/accel"]
accel-sha1 = ["esp-mbedtls-sys/accel-sha1"]
accel-sha256 = ["esp-mbedtls-sys/accel-sha256"]
accel-sha512 = ["esp-mbedtls-sys/accel-sha512"]
accel-exp-mod = ["esp-mbedtls-sys/accel-exp-mod"]

[dependencies]
esp-mbedtls-sys = { path = "../esp-mbedtls-sys", default-features = false }
defmt = { version = "1", optional = true }
log = { version = "0.4", default-features = false, optional = true }
embedded-io = { version = "0.7" }
embedded-io-async = { version = "0.7" }
enumset = { version = "1", default-features = false }
rand_core = "0.9"
critical-section = "1"
edge-nal = { version = "0.6", optional = true }
digest = { version = "0.10", default-features = false }
sha1 = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }

# esp-hal
esp-hal = { version = "1", features = ["unstable"], optional = true }
crypto-bigint = { version = "0.5.3", optional = true, default-features = false, features = ["extra-sizes"] }
