[package]
name = "esp-mbedtls"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.84"

[lib]
harness = false

[features]
default = ["edge-nal"]

# Re-expose esp-mbedtls-sys features
force-generate-bindings = ["esp-mbedtls-sys/force-generate-bindings"]
force-esp-riscv-toolchain = ["esp-mbedtls-sys/force-esp-riscv-toolchain"]
nohook = ["esp-mbedtls-sys/nohook"]
nohook-sha1 = ["esp-mbedtls-sys/nohook-sha1"]
nohook-sha256 = ["esp-mbedtls-sys/nohook-sha256"]
nohook-sha512 = ["esp-mbedtls-sys/nohook-sha512"]
nohook-exp-mod = ["esp-mbedtls-sys/nohook-exp-mod"]
accel-esp32 = ["esp-mbedtls-sys/accel-esp32"]
accel-esp32c2 = ["esp-mbedtls-sys/accel-esp32c2"]
accel-esp32c3 = ["esp-mbedtls-sys/accel-esp32c3"]
accel-esp32c6 = ["esp-mbedtls-sys/accel-esp32c6"]
accel-esp32h2 = ["esp-mbedtls-sys/accel-esp32h2"]
accel-esp32s2 = ["esp-mbedtls-sys/accel-esp32s2"]
accel-esp32s3 = ["esp-mbedtls-sys/accel-esp32s3"]

[dependencies]
esp-mbedtls-sys = { path = "../esp-mbedtls-sys", default-features = false }
defmt = { version = "1", optional = true }
log = { version = "0.4", default-features = false, optional = true }
embedded-io = { version = "0.7" }
embedded-io-async = { version = "0.7" }
enumset = { version = "1", default-features = false }
rand_core = "0.9"
critical-section = "1"
edge-nal = { version = "0.6", optional = true }
