[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow      = "1.0.68"
bindgen     = "0.68.1"
directories = "4.0.1"
env_logger  = "0.10.0"
log         = "0.4.17"
cmake       = "0.1.50"
tempdir     = "0.3.7"
fs_extra    = "1.3.0"
clap        = { version = "4.4.2", features = ["derive"] }
