[package]
name = "examples-std"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.84"

[profile.release]
debug = true
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
log = "0.4"
mbedtls-rs = { path = "../../mbedtls-rs", features = ["log", "edge-nal"] }
enumset = { version = "1", default-features = false }

# For the `edge_*` examples
edge-http = { version = "0.7", features = ["io"] }

# STD-only dependencies
rand = "0.9"
critical-section = { version = "1", features = ["std"] }
embedded-io-adapters = { version = "0.7", features = ["std", "futures-03"] }
async-io-mini = "0.4"
async-executor = "1"
embassy-time = { version = "0.5", features = ["std", "generic-queue-64"] }
edge-nal-std = { version = "0.6", features = ["async-io-mini"] }
futures-lite = "1"

[target.'cfg(not(target_os = "espidf"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_os = "espidf")'.dependencies]
esp-idf-svc = "0.51"

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }
